# gear-game-engine

./: .gitmodules  CMakeLists.txt  TODO.txt  run.bash
.cache/clangd/index/: Application.cpp.31F9968902C4882F.idx  Application.hpp.4593D753962261F1.idx  Console.cpp.43B6271C9587C5E5.idx  Console.hpp.1D1734C18FFF7355.idx  ConsoleColor.cpp.2DC10B905B2F41A8.idx  ConsoleColor.hpp.7A4D916CF68AA84D.idx  Engine.hpp.BDFD99D606620DB5.idx  EntryPoint.cpp.025C66BC84399870.idx  EntryPoint.hpp.45659DA3CB538A40.idx  String.cpp.4F7245B58CFE47F4.idx  String.hpp.B50206FF304B1B5B.idx  testbed.cpp.D03B0BDC305D285C.idx
engine/: CMakeLists.txt  Engine.hpp
engine/core/: Application.cpp  Application.hpp  EntryPoint.cpp  GraphicContext.hpp  Macro.hpp  MemoryManager.cpp  MemoryManager.hpp  Window.hpp  window.h
engine/platform/: CMakeLists.txt  ConsoleColor.hpp
engine/platform/linux/: ConsoleColor.cpp  LinuxWindow.cpp  LinuxWindow.h  LinuxWindow.hpp
engine/platform/opengl/: OpenglGraphicContext.cpp  OpenglGraphicContext.hpp
engine/platform/windows/: WindowsWindow.cpp  WindowsWindow.h
engine/utility/: Console.cpp  Console.hpp  String.cpp  String.hpp
project/: CMakeLists.txt
project/testbed/: testbed.cpp
